# watering-system-v2

./: .gitignore  .gitmodules
mothership/: CMakeLists.txt  partitions.csv  pytest_mothership.py  sdkconfig  sdkconfig.old
mothership/main/: CMakeLists.txt  idf_component.yml  mothership_main.cpp  mothership_main.h
mothership/main/actions_list/: actions_list.cpp  actions_list.h
mothership/main/modules/ms_bluetooth/: ms_bluetooth.cpp  ms_bluetooth.h
mothership/main/modules/ms_bluetooth/utils/ms_central_utils/: misc.c
voyager/: CMakeLists.txt  sdkconfig  sdkconfig.old
voyager/main/: CMakeLists.txt  voyager_main.c  voyager_main.cpp  voyager_main.h
voyager/main/characteristics/: voyager_primary.c  voyager_primary.cpp
voyager/main/voyager_ble/: voyager_ble.c  voyager_ble.cpp  voyager_ble.h
voyager/main/voyager_ble/characteristics/: voyager_primary.cpp  voyager_primary.h
voyager/main/voyager_ble_led/: voyager_ble_led.cpp  voyager_ble_led.h
