idf_component_register(SRCS "mothership_main.cpp"
                        "actions_list/actions_list.cpp"
                        "modules/ms_bluetooth/utils/ms_central_utils/misc.c"
                        "modules/ms_bluetooth/utils/ms_central_utils/peer.c"
                        "modules/ms_bluetooth/ms_bluetooth.cpp"
                    INCLUDE_DIRS ".")
