idf_component_register(SRCS
                        "modules/actions/actions.cpp"
                        "voyager_ble/voyager_ble.cpp"
                        "voyager_ble_led/voyager_ble_led.cpp"
                        "voyager_ble/characteristics/voyager_primary.cpp"
                        "voyager_main.cpp"
                    INCLUDE_DIRS ".")
